added title and cleared Summary Report

--- a/Embed10/545Project3/MovieEmbedExploreFinal_Group10.ipynb
+++ b/Embed10/545Project3/MovieEmbedExploreFinal_Group10.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 545 M7 Project: Latent Space Cluster Analysis\n",
+    "\n",
+    "- Stace Worrell\n",
+    "- Tochukwu \"Sylvester\" Nwizu\n",
+    "- Giuseppe Schintu\n",
+    "\n",
+    "- Movie: Honey, I Shrunk The Kids!\n",
+    "\n",
+    "\n",
+    "`In this project, we aim to address the following three hypotheses:`\n",
+    "- Analyzing Narrative Impact: The Role of Key Characters and Objects in Film as Identified by CLIP\n",
+    "- Scene Consistency and Transition: Frames that are visually and thematically similar cluster together tightly in t-SNE and PCA visualizations, and distinct clusters correspond to different scenes/settings in the movie.\n",
+    "- Quantitative Analysis of Object Distribution in Images Using Deep Learning Models \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Global Code and Functions\n",
     "Run this first to import modules and global functions"
    ]
@@ -781,10 +800,6 @@
    "source": [
     "### Methods Summary\n",
     "\n",
-    "This section should highlight methods you used in your exploratory analysis. You should include at least one clustering technique or develop another way to relate frames to other frames. You should also consider dimensionality reduction.\n",
-    "\n",
-    "Each thumbnail is one frame of the Movie. Each thumbnail has been analyzed and embedded via CLIP. Referenced Model: https://replicate.com/andreasjansson/clip-features/examples .\n",
-    "\n",
     "#### For hypothesis 1 we used the following methods\n",
     "\n",
     "1. Explore CLIP through a natural query for objects and investigate the surounding frames.\n",
@@ -798,19 +813,17 @@
    "source": [
     "### Hunches and Hypotheses\n",
     "\n",
-    "This section should summarize the questions that you asked about the film that could potentially be answered by exploratory analysis. You should ask at least three questions.\n",
-    "\n",
     "**Hypothesis 1** \n",
-    "-   Using Clip to find an object and observe ~5 frames before and after and interpret the results.\n",
-    "-   A hypothesis we discussed was that certain characters, or objects in the movie would be used for dramatic or comedic effect. We are using CLIP to identify these objects and then explore the surrounding frames to discover any evidence to support or refute this hypothesis.\n",
+    "-   Analyzing Narrative Impact: The Role of Key Characters and Objects in Film as Identified by CLIP\n",
+    "-   **Rationale:** In movies, the appearance of certain characters or objects is significantly associated with specific narrative effects such as humor or drama. By using the CLIP model to detect these elements in selected frames and analyzing the content of approximately five frames before and after their appearance, we can identify patterns that support or refute their role in contributing to these narrative effects.\n",
     "\n",
     "**Hypothesis 2** \n",
-    "-   Scene Consistency and Transition - Frames that are visually and thematically similar cluster together tightly in t-SNE and PCA visualizations, and distinct clusters correspond to different scenes or settings in the movie.\n",
+    "-   Scene Consistency and Transition: Frames that are visually and thematically similar cluster together tightly in t-SNE and PCA visualizations, and distinct clusters correspond to different scenes or settings in the movie.\n",
     "-  **Rationale:** This hypothesis tests the ability of CLIP embeddings, which capture both visual and semantic content, to differentiate between distinct scenes based on their visual content and thematic elements.\n",
     "\n",
     "**Hypothesis 3**\n",
-    "* Look for a model that can analyze an image to identify the type  of objects in the image\n",
-    "* Use counter to count the number of each object in the image\n"
+    "-   Quantitative Analysis of Object Distribution in Images Using Deep Learning Models \n",
+    "-   **Rationale:** The use of advanced image recognition models enables accurate identification and quantification of different object types within images, facilitating detailed analysis of object distribution patterns across varied datasets.\n"
    ]
   },
   {
@@ -819,61 +832,46 @@
    "source": [
     "### Results and Interpretation\n",
     "\n",
-    "**Hypothesis 1:**\n",
-    "- Begin by looking for the top images of a dog, lawnmower and an ant returned from CLIP queries.\n",
-    "- Explore the frames surrounding the images identified by the above queries.\n",
+    "#### Hypothesis 1:\n",
+    "- **Objective:** Identify and analyze the top images of a dog, a lawnmower, and an ant using CLIP queries, and explore the surrounding frames to determine their narrative impact.\n",
     "\n",
-    "These are the top matches returned by CLIP.\n",
+    "**Top Matches from CLIP:**\n",
+    "1. **Dog:** 'a photo of a white and brown dog' - **thumbnail_5039.jpg**\n",
+    "2. **Lawnmower:** 'a photo of a lawnmower' - **thumbnail_4734.jpg**\n",
+    "3. **Ant:** 'a photo of an ant' - **thumbnail_3231.jpg**\n",
     "\n",
-    "1. 'a photo of a white and brown dog' = thumbnail_5039.jpg\n",
-    "2. 'a photo of a lawnmower' = thumbnail_4734.jpg\n",
-    "3. 'a photo of an ant' = thumbnail_3231.jpg\n",
+    "**Analysis of Key Frames:**\n",
+    "- **Dog Scene Analysis:**\n",
+    "  From the sequence of frames, the storyline unfolds with children running, parents talking, and the dog focusing upwards, climaxing with a dramatic moment where the father nearly harms his accidentally shrunken son. The dog's central position and alert demeanor suggest an awareness surpassing the humans, a trope often used to enhance dramatic tension in films.\n",
+    "  \n",
+    "- **Lawnmower Scene Analysis:**\n",
+    "  A neighborhood child remotely controls the lawnmower amidst children playing on the grass, creating a direct threat in this action-packed scene. The foreshadowing of this event is noted at index 790, where the lawnmower and its controller are introduced, demonstrating the effective use of foreshadowing discovered through our frame-by-frame analysis.\n",
     "\n",
-    "The indexes we are interested in are 5038, 4733 and 3230.\n",
+    "- **Ant Scene Analysis:**\n",
+    "  Initially a threat, the ant later interacts with a scorpion, shifting its role from antagonist to protector. This transformation not only adds complexity to the character but also alters its narrative impact, from eliciting fear to evoking sympathy among the audience.\n",
     "\n",
-    "- For the dog image:\n",
+    "#### Hypothesis 2:\n",
+    "- **Objective:** Utilize t-SNE and K-means clustering to analyze and categorize movie frames by scene content and type after removing noise from non-relevant frames like opening and closing credits.\n",
     "\n",
-    "From this sequence of frames, we see the children running, the parents talking, the dog looking up at the table, the kids waving their arms for attention and ends with the father narrowly avoiding accidentally eating his shrunken son. The dog being in the center anchors the dramatic tension of the scene. He almost looks like he is trying to warn the father or somehow knows more than the humans. Sentient animals with superior knowledge or wisdom than humans has been a trope used in several other films which depict animals (especially in comedies) as central figures.\n",
+    "**Findings:**\n",
+    "  The embeddings captured by our models effectively differentiated between scene types (e.g., indoor vs. outdoor, calm vs. action-packed), helping segment the movie based on visual content. This clustering accurately reflected the proper timeframe and transitions within the movie, with t-SNE outperforming PCA in visual correlation and cluster separation.\n",
     "\n",
-    "- For the lawnmower image:\n",
+    "#### Hypothesis 3:\n",
+    "- **Objective:** Analyze the first 100 images in the thumbnail folder using the Yolo model to identify and count types of objects, examining the effectiveness and efficiency of object detection in a controlled set.\n",
     "\n",
-    "In this scene a neighbor kid is remotely controlling the lawnmower while the children are in the grass. This is a clear action scene with a threat elliciting dramatic flight.\n",
+    "**Results:**\n",
+    "  The Yolo model identified objects within the images, though processing was slow. The results were visualized using bounding boxes and documented in a DataFrame, summarizing the count and type of each detected object. This provided a clear, quantitative insight into the object distribution within the sampled frames.\n",
     "\n",
-    "There doesn't seem to be many similar frames in the movie for the lawnmower. This is probably because it is a singular threat evnt used for dramatic tension in a single scene. It does look like it may appear around 790, so let's see if that is foreshadowing.\n",
-    "\n",
-    "In the scene around index 790 we see the son showing the remote controlled lawnmower to the boy who appears later controlling the mower in the flight scene. So this is an example of foreshadowing in a film that we identified by using the data to point us to something interesting!\n",
-    "\n",
-    "- For the ant image:\n",
-    "\n",
-    "In this scene, we see a boy easting some white substance, followed by a girl who appears scared or surprised. The next frame shows the cause, which is an ant menacing the kids, which is noticed by the boy as well, and the kids seem to begin fleeing the threat.\n",
-    "\n",
-    "The ant seems to be a later threat in the film, possibly also foreshadowed around 2180. However it appears to show up for an extended time around 4400.\n",
-    "\n",
-    "2180 looks like it matches the ant scene because of the setting. They both have extensive vegetation in the scene, which probably accounts for the lower distance than the later match around 4400.\n",
-    "\n",
-    "_**This identified the same scene that we discovered through exploration.**_\n",
-    "\n",
-    "- We began with a hypothesis that the dog would be comedic relief and the ant and lawnmower would be for dramatic effect or threat of danger.We used CLIP to identify the inital frames of interest, then proceeded analyzing the target frames using the Euclidian distance, performing more exploration of similar frames and then circling back to a more specific CLIP question. The original hypothesis that these objects would be used as comedic relief or dramatic seems to have some justification, as the lawnmower and ant appear intially as dramatic threats, but from this discovery, it looks like the ant actually fought a scorpion and saved the kids, which indicated it was also used to elicit a sympathetic response from the audience. \n",
-    "\n",
-    "**Hypothesis 2:** \n",
-    "- After removing much of the noise from opening and closing credits frames and applying t-SNE and K-means we examined samples from identified clusters and we can observe that frames correspond to specific scenes or types of scenes (indoor vs outdoor, calm vs action-packed). Embeddings effectively capture scene-specific features and can be used to segment the movie based on visual content. Also, clusters seem to reflect the proper timeframe and transition of the movie. t-SNE seemed to work better than PCA at handling and splitting clusters with visual correlation.\n",
-    "\n",
-    "**Hypothesis 3:**\n",
-    "- We used Yolo model, an open source model we got from the internet, to identify objects in an image. We initially analyzed the entire images in the thumpnail_folder, but found out that it wasn't a good idea because the code was slow, so we decided to analyze the first 100 images in the image frame.The detected results are stored in a DataFrame df, which is printed out. The DataFrame contains columns such as xmin, xmax, ymin, ymax, confidence, and name of the detected object.\n",
-    "The detected objects are overlaid on the image with bounding boxes and the image is displayed using matplotlib. After all images are processed, the total counts of detected objects across all images are printed. This provides a summary of how many of each type of object were detected in the analyzed images.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Reflection\n",
     "\n",
-    "Reflect on your process of analysis. What worked well and did not work well? Describe the limitations of the work and describe what you would work on with more time.\n",
+    "**Process Review:**\n",
+    "Our exploration of CLIP highlighted its robust capability to interpret natural language queries and direct our analytical focus, while integrating Yolo and clustering algorithms offered a multi-faceted view of the film's visual narrative.\n",
     "\n",
-    "We initially began exploring CLIP to discover the capabilities it provided. We were impressed with the model's ability to return results from simple english questions, so we brainstormed for some ideas that we could explore it as well as other tools to compare and contrast CLIP to other tools and also to discover what it could tell us about the film itself.\n",
+    "**Challenges and Limitations:**\n",
+    "The slow processing speed of the full image analysis using Yolo was a notable limitation. Optimizing this aspect would be a primary goal for future work, alongside exploring additional AI tools for more nuanced insights.\n",
     "\n",
-    "We came up with the hypothesis that we could identify some objects in the film and explore whether they provided an assumed purpose in the movie. We did achieve (subjectively) a confirmation tthat the objects were used in a way that coincided with our hypothesis. What was interesting is the way that our initial exploration led to a secondary use that effectively used CLIP to identify a further area of research. This resulted in the surprising find that the ant seems to not only be used as a threat but also as an ally to evoke both fear and empathy.\n"
+    "**Future Directions:**\n",
+    "Given additional time, we would expand our analysis to include a larger dataset of films to validate and refine our findings further. Employing more advanced models could also uncover deeper insights into narrative structures and character roles within broader cinematic contexts.\n"
    ]
   }
  ],
