added title and cleared Summary Report

--- a/Embed10/545Project3/MovieEmbedExploreFinal_Group10.ipynb
+++ b/Embed10/545Project3/MovieEmbedExploreFinal_Group10.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "\n",
     "`In this project, we aim to address the following three hypotheses:`\n",
-    "- Analyzing Narrative Impact: The Role of Key Characters and Objects in Film as Identified by CLIP\n",
+    "- Analyzing Narrative Impact: The Role of Key Characters and Objects in Film as Identified by CLIP.\n",
     "- Scene Consistency and Transition: Frames that are visually and thematically similar cluster together tightly in t-SNE and PCA visualizations, and distinct clusters correspond to different scenes/settings in the movie.\n",
-    "- Quantitative Analysis of Object Distribution in Images Using Deep Learning Models \n"
+    "- Quantitative Analysis of Object Recognition in Images Using Deep Learning Models.\n"
    ]
   },
   {
@@ -500,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets find the best clustering number for t-SNE and PCA..."
+    "#### Find the best clustering number for t-SNE and PCA..."
    ]
   },
   {
@@ -570,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets cluster with t-SNE and PCA best Silhoutte Scores."
+    "#### Cluster with t-SNE and PCA best Silhoutte Scores."
    ]
   },
   {
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Let sample images in t-SNE clusters"
+    "#### Sample images in t-SNE clusters"
    ]
   },
   {
@@ -640,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lets sample images in PCA clusters"
+    "#### Sample images in PCA clusters"
    ]
   },
   {
